--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,6 +1,56 @@
-<html>
+<!-- <html>
     <head>
         <title>Bocchi is literally me</title>
     </head>
     <p>Hello from flask!</p>
+</html> -->
+
+<!-- from flask import Flask
+
+app = Flask(__name__)
+
+@app.route('/')
+def hello():
+    return '''
+<html> 
+    <head> 
+      <title>Simple App</title> 
+     </head> 
+      <body> 
+        <h1>Hello</h1> 
+        <p>From Flask - no templates</p> 
+      </body> 
+</html>'' -->
+
+<html>
+  <head>
+    <title>The Orange Onion</title>
+    <meta charset="utf=8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+  </head>
+  <body>
+
+    <div class="bg-primary text-white p-5 text-center">
+        <h1>The Orange Onion</h1>
+    </div>
+
+    <div class="container">
+      <h1>Please log*onion*</h1>
+      <img src="src\templates\OrangeOnion.jpg" alt="A picture of an orange onion (too bad it's not showing on my end)">
+      <br>
+      <form action="" method="post">
+        <input type="text" placeholder="Username" name="username" value="{{
+          request.form.username }}">
+         <input type="password" placeholder="Password" name="password" value="{{
+          request.form.password }}">
+        <input class="btn btn-default" type="submit" value="Login">
+      </form>
+      {% if error %}
+        <p class="error"><strong>Error:</strong> {{ error }}
+      {% endif %}
+    </div>
+    
+  </body>
 </html>
