Added image to static folder

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -23,7 +23,7 @@ def hello():
 </html>'' -->
 
 
-
+@import <Colors class="css"></Colors>
 <html>
   <head>
     <title>The Orange Onion</title>
@@ -40,7 +40,7 @@ def hello():
 
     <div class="container">
       <h1>Please log*onion*</h1>
-      <img src="src\templates\OrangeOnion.jpg" alt="A picture of an orange onion (too bad it's not showing on my end)">
+      <img src="src\static\OrangeOnion.jpg" alt="A picture of an orange onion (too bad it's not showing on my end)">
       <br>
       <form action="" method="post">
         <input type="text" placeholder="Username" name="username" value="{{
