--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,23 +1,5 @@
 {% extends "base.html" %}
 {% block title %}The Orange Onion{% endblock %}
 {% block content %}
-<div class="bg-primary text-white p-5 text-center">
-  <h1>The Orange Onion</h1>
-</div>
-
-<div class="container">
-  <h1>Please log*onion*</h1>
-  <img src="src\static\OrangeOnion.jpg" alt="A picture of an orange onion (too bad it's not showing on my end)">
-  <br>
-  <form action="" method="post">
-    <input type="text" placeholder="Username" name="username" value="{{
-      request.form.username }}">
-     <input type="password" placeholder="Password" name="password" value="{{
-      request.form.password }}">
-    <input class="btn btn-default" type="submit" value="Login">
-  </form>
-  {% if error %}
-    <p class="error"><strong>Error:</strong> {{ error }}
-  {% endif %}
-</div>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 {% endblock %}
