--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -19,7 +19,16 @@
               <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Login</a><!-- To replace with dynamic link based on session availability -->
+              {% if login_status %}
+                <a class="nav-link active" aria-current="page" href="/new-article">New Article</a>
+              {% endif %}
+            </li>
+            <li class="nav-item">
+              {% if login_status %}
+                <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
+              {% else %}
+                <a class="nav-link active" aria-current="page" href="/login">Login</a>
+              {% endif %}
             </li>
           </ul>
           <form class="d-flex" role="search">
