--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -38,7 +38,8 @@
         </div>
       </div>
     </nav>
-    <div id="content">{% block content %}{% endblock %}</div>
+    <div class="p-3"></div>  <!-- spacer -->
+    <div id="content" class="p-1">{% block content %}{% endblock %}</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
