--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,12 +1,24 @@
 {% extends "base.html" %}
 {% block title %}The Orange Onion{% endblock %}
 {% block content %}
-<div class="bg-primary text-white p-5 text-center">
-  <h1>The Orange Onion</h1>
+<style>
+  /* use this to change the color of the navbar, containers, etc */
+  .navbar-custom{
+  background-color :rgb(5, 243, 255) 
+}
+</style>
+
+<div class="navbar-custom">
+  <div class=" p-5 text-center">
+    <h1 style =" color: orange">Test</h1>
+    <h1>The Orange Onion</h1>
+  </div>
 </div>
+
 
 <div class="container">
   <h1>Please log*onion*</h1>
+  <h1 style =" color: orange">Test</h1>
   <img src="src\static\OrangeOnion.jpg" alt="A picture of an orange onion (too bad it's not showing on my end)">
   <br>
   <form action="" method="post">
