--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -16,10 +16,10 @@
 </div>
 
 
-<div class="container">
+<div class="container-lg">
   <h1>Please log*onion*</h1>
   <h1 style =" color: orange">Test</h1>
-  <img src="src\static\OrangeOnion.jpg" alt="A picture of an orange onion (too bad it's not showing on my end)">
+  <img src="{{url_for('static', filename='OrangeOnion.jpg')}}" class="img-fluid img-thumbnail" alt="An orange onion">
   <br>
   <form action="" method="post">
     <input type="text" placeholder="Username" name="username" value="{{
