--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,35 +1,30 @@
 {% extends "base.html" %}
-{% block title %}The Orange Onion{% endblock %}
+{% block title %}Login - The Orange Onion{% endblock %}
 {% block content %}
-<style>
-  /* use this to change the color of the navbar, containers, etc */
-  .navbar-custom{
-  background-color :rgb(5, 243, 255) 
-}
-</style>
-
-<div class="navbar-custom">
-  <div class=" p-5 text-center">
-    <h1 style =" color: orange">Test</h1>
-    <h1>The Orange Onion</h1>
+<div class="container-lg p-3 gap-3 mt-3 mt-lg-5">
+  <div class="row justify-content-center mt-lg-5 mb-4">
+    <img src="{{url_for('static', filename='OrangeOnion.jpg')}}" class="img-fluid img-thumbnail w-25 border-white" alt="An orange onion" style="max-width: 100px">
+    <div style="width: 5px"></div>
   </div>
-</div>
-
-
-<div class="container-lg">
-  <h1>Please log*onion*</h1>
-  <h1 style =" color: orange">Test</h1>
-  <img src="{{url_for('static', filename='OrangeOnion.jpg')}}" class="img-fluid img-thumbnail" alt="An orange onion">
-  <br>
-  <form action="" method="post">
-    <input type="text" placeholder="Username" name="username" value="{{
-      request.form.username }}">
-     <input type="password" placeholder="Password" name="password" value="{{
-      request.form.password }}">
-    <input class="btn btn-default" type="submit" value="Login">
-  </form>
-  {% if error %}
-    <p class="error"><strong>Error:</strong> {{ error }}
-  {% endif %}
+  <div class="row justify-content-center mb-3 mb-lg-5">
+    <h3 class="text-center"><strong>Sign in to Orange Onion</strong></h3>
+  </div>
+  <div class="row justify-content-center mt-3 mt-lg-5">
+    <div class="col-9 col-lg-4">
+      <form class="shadow border rounded-2 border-light p-4">
+          <div class="mb-3">
+            <label for="inputUsername" class="form-label"><strong>Username</strong></label>
+            <input type="text" class="form-control" id="inputUsername" name="username" value="{{ request.form['username'] }}">
+          </div>
+          <div class="mb-3">
+            <label for="inputPassword" class="form-label"><strong>Password</strong></label>
+            <input type="password" class="form-control" id="inputPassword" name="password" value="{{ request.form['password'] }}">
+          </div>
+          <div class="d-grid mb-3">
+            <button type="submit" class="btn btn-primary shadow-sm mt-3">Submit</button>
+          </div>
+      </form>
+    </div>
+  </div>
 </div>
 {% endblock %}
