--- a/src/templates/new-article.html
+++ b/src/templates/new-article.html
@@ -2,4 +2,8 @@
 {% block title %}Create New Article - The Orange Onion{% endblock %}
 {% block content %}
 <div class="container-lg">Article creation UX goes here</div>
+<div class="form-floating">
+    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+    <label for="floatingTextarea2">New Article</label>
+  </div>
 {% endblock %}
