--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -11,7 +11,7 @@
   </div>
   <div class="row justify-content-center mt-3 mt-lg-5">
     <div class="col-9 col-lg-4">
-      <form class="shadow border rounded-2 border-light p-4">
+      <form class="shadow border rounded-2 border-light p-4" method="post">
           <div class="mb-3">
             <label for="inputUsername" class="form-label"><strong>Username</strong></label>
             <input type="text" class="form-control" id="inputUsername" name="username" value="{{ request.form['username'] }}">
