--- a/src/templates/new_article.html
+++ b/src/templates/new_article.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 {% block title %}Create New Article - The Orange Onion{% endblock %}
 {% block content %}
-<div class="container-lg">Article creation UX goes here</div>
-<div class="form-floating">
-    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
-    <label for="floatingTextarea2">New Article</label>
+<div class="container-lg">
+    <div class="form-floating">
+        <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+        <label for="floatingTextarea2">New Article</label>
+    </div>
 </div>
 {% endblock %}
