--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,7 +13,7 @@
             <h5 class="card-title">{{ article.title }}</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">{{ article.date }}</h6>
             <p class="card-text">{{ article.content }}</p>
-            <a href="#" class="card-link">read more...</a>
+            <a href="{{ url_for('article_page', article_id=article.uuid) }}" class="card-link">read more...</a>
           </div>
         </div>
       </div>
