made edit to navbar

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -20,7 +20,7 @@
             </li>
             <li class="nav-item">
               {% if login_status %}
-                <a class="nav-link active" aria-current="page" href="/new-article">New Article</a>
+                <a class="nav-link active" aria-current="page" href="/new_article">New Article</a>
               {% endif %}
             </li>
             <li class="nav-item">
