--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -31,8 +31,9 @@
               {% endif %}
             </li>
           </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <form class="d-flex" role="search" method="post">
+            <input value="search" type="hidden" name="form_type">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search" value="{{ request.form['input'] }}">
             <button class="btn btn-outline-secondary" type="submit">Search</button>
           </form>
         </div>
