--- a/src/templates/new_article.html
+++ b/src/templates/new_article.html
@@ -7,18 +7,18 @@
       <h2 class="mt-1">New Article</h2>
     </div>
 
-  <div class="container-lg">Click below to add your article. Be sure to include a title, description, and the article itself.</div>
-    <div class="col">
-    <div class="form-floating"></div>
+    <div class="container-lg">Click below to add your article. Be sure to include a title, description, and the article itself.</div>
+      <div class="col">
+        <div class="form-floating">
 
-    <div class="form-floating mb-3">
-      <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-      <label for="floatingInput">Title</label>
-    </div>
+          <div class="form-floating mb-3">
+            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+            <label for="floatingInput">Title</label>
+          </div>
     
-    <textarea class="form-control" placeholder="Description" id="floatingTextarea2" style="height: 50px"></textarea>
-    <textarea class="form-control" placeholder="Article" id="floatingTextarea2" style="height: 100px"></textarea>
-    
+        <textarea class="form-control" placeholder="Description" id="floatingTextarea2" style="height: 50px"></textarea>
+        <textarea class="form-control" placeholder="Article" id="floatingTextarea2" style="height: 100px"></textarea>
+      </div>
   </div>
 </div>
 {% endblock %}
