Added submit button

--- a/src/templates/new_article.html
+++ b/src/templates/new_article.html
@@ -15,9 +15,18 @@
             <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
             <label for="floatingInput">Title</label>
           </div>
-    
-        <textarea class="form-control" placeholder="Description" id="floatingTextarea2" style="height: 50px"></textarea>
-        <textarea class="form-control" placeholder="Article" id="floatingTextarea2" style="height: 100px"></textarea>
+
+          <div class="form-floating mb-3">
+            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+            <label for="floatingInput">Description</label>
+          </div>
+
+          <div class="form-floating mb-3">
+            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+            <label for="floatingTextarea2">Article</label>
+          </div>
+
+          <div><input class="btn btn-primary" type="submit" value="Submit"></div>
       </div>
   </div>
 </div>
