--- a/src/templates/new_article.html
+++ b/src/templates/new_article.html
@@ -11,17 +11,17 @@
       <div class="col">
         <div class="form-floating">
 
-          <div class="form-floating mb-3">
+          <div class="form-floating mb-3 col-9 col-lg-8">
             <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
             <label for="floatingInput">Title</label>
           </div>
 
-          <div class="form-floating mb-3">
+          <div class="form-floating mb-3 col-9 col-lg-8">
             <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
             <label for="floatingInput">Description</label>
           </div>
 
-          <div class="form-floating mb-3">
+          <div class="form-floating mb-3 col-9 col-lg-8">
             <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
             <label for="floatingTextarea2">Article</label>
           </div>
