--- a/src/templates/new_article.html
+++ b/src/templates/new_article.html
@@ -7,26 +7,38 @@
       <h2 class="mt-1">New Article</h2>
     </div>
 
-    <div class="container-lg">Click below to add your article. Be sure to include a title, description, and the article itself.</div>
+    <div class="container-lg">
+      <div class="text-center form-floating">
+        Click below to add your article. Be sure to include a title, description, and the article itself.
+      </div>
+      
+      
       <div class="col">
         <div class="form-floating">
-
-          <div class="form-floating mb-3 col-9 col-lg-8">
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">Title</label>
+          <div class="text-center"> 
+            <div class="row justify-content-center">
+              <div class="form-floating mb-3 col-9 col-lg-8">
+                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                <label for="floatingInput">Title</label>
+              </div>
+            </div>
+  
+            <div class="row justify-content-center">
+              <div class="form-floating mb-3 col-9 col-lg-8">
+                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                <label for="floatingInput">Description</label>
+              </div>
+            </div>
+  
+            <div class="row justify-content-center">
+              <div class="form-floating mb-3 col-9 col-lg-8">
+                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+                <label for="floatingTextarea2">Article</label>
+              </div>
+            </div>
+  
+            <div><input class="btn btn-primary" type="submit" value="Submit"></div>
           </div>
-
-          <div class="form-floating mb-3 col-9 col-lg-8">
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">Description</label>
-          </div>
-
-          <div class="form-floating mb-3 col-9 col-lg-8">
-            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
-            <label for="floatingTextarea2">Article</label>
-          </div>
-
-          <div><input class="btn btn-primary" type="submit" value="Submit"></div>
       </div>
   </div>
 </div>
