FIX: Change title typo

--- a/src/templates/article.html
+++ b/src/templates/article.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Create New Article - The Orange Onion{% endblock %}
+{% block title %}{{article.title}} - The Orange Onion{% endblock %}
 {% block content %}
 <!DOCTYPE html>
 <html>
