--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -7,7 +7,7 @@
       <h2 class="mt-1">Search Results</h2>
     </div>
     <div class="col mb-3">
-      <a>You tried to perform a search for "{{ search_field_input if search_field_input != "blank" }}" - unfortunately this functionality is not part of the MVP and has not yet been implemented!</a>
+      <p>You tried to perform a search for "{{ search_field_input if search_field_input != "blank" }}" - unfortunately this functionality is not part of the MVP and has not yet been implemented!</p>
     </div>
   </div>
 </div>
