--- a/src/templates/404.html
+++ b/src/templates/404.html
@@ -3,12 +3,14 @@
 {% block content %}
 <div class="container-lg">
   <div class="row row-cols-1 gy-3">
-    <div class="col">
+    <div class="col mb-3">
       <h2 class="mt-1">Page Not Found</h2>
     </div>
-    <div class="col mb-3">
-      <p>Oopsie~ Looks the page you're looking for doesn't exist!</p>
-      <p><a href="{{ url_for('landing_page') }}">Click here</a> to return to the home page.</p>
+    <div class="col">
+      <p>
+        Oopsie~ Looks the page you're looking for doesn't exist!<br>
+        <a href="{{ url_for('landing_page') }}">Click here</a> to return to the home page.
+      </p>
     </div>
   </div>
 </div>
