--- a/src/templates/article.html
+++ b/src/templates/article.html
@@ -1,22 +1,38 @@
 {% extends "base.html" %}
 {% block title %}{{article.title}} - The Orange Onion{% endblock %}
 {% block content %}
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    </head>
-    <body>
-        <header style="margin: 0 auto; text-align: center; padding: 0 250px;">
-            <h1>{{ article.title }}</h1>
-            <p>Published on {{ article.date }} | Written by "The Blue Onion Team"</p>
-            <img src="{{url_for('static', filename='CSUFAtNight.jpg')}}" width="800px" height="500px"></img>
-        </header>
-        <article style="margin: 50px auto; text-align: center; padding: 0 250px;">
-            <p>{{ article.long_content }}</p>
-        </article>
-    </body>
-</html>
+<div class="container-lg">
+  <div class="row mt-1">
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="{{ url_for('landing_page') }}">Home</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Read Article</li>
+        </ol>
+      </nav>
+    <article>
+      <div class="row mt-1">
+        <h2 class="text-start fw-bolder">{{ article.title }}</h2>
+      </div>
+      <div class="row mb-1 mb-lg-3">
+        <p class="text-start fw-semibold">Published on {{ article.date }}&ensp; |&ensp; Written by "The Blue Onion Team"</p>
+      </div>
+      <div class="row mb-1 mb-lg-3">
+        <div class="col">
+          <img src="{{url_for('static', filename='CSUFAtNight.jpg')}}" class="img-fluid border-white" alt="Accompanying picture">
+        </div>
+      </div>
+      <div class="row row-cols-1 row-cols-sm-2 mt-1 mt-lg-3">
+        <div class="col-11 col-lg-9">
+          <p class="text-start text-break pe-3 border-end border-secondary-subtle">{{ article.long_content }}</p>
+        </div>
+        <div class="col col-lg-3">
+          <p class="text-start fst-italic ps-1">
+            Ads <br>
+            <i>We're looking for sponsors!</i>
+          </p>
+        </div>
+      </div>
+    </article>
+  </div>
+</div>
 {% endblock %}
