FIX: Submit button -> Login

--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -22,7 +22,7 @@
             <input type="password" class="form-control" id="inputPassword" name="password" value="{{ request.form['password'] }}">
           </div>
           <div class="d-grid mb-3">
-            <button type="submit" class="btn btn-primary shadow-sm mt-3">Submit</button>
+            <button type="submit" class="btn btn-primary shadow-sm mt-3">Login</button>
           </div>
       </form>
     </div>
