FEAT (new_article): Add form validation
All fields are now required for successful form submission

--- a/src/templates/new_article.html
+++ b/src/templates/new_article.html
@@ -15,6 +15,7 @@
                   id="titleInput"
                   placeholder="Article Title"
                   name="title"
+                  required
           >
           <label for="titleInput">Title</label>
         </div>
@@ -25,6 +26,7 @@
                   id="descriptionInput"
                   placeholder="Article Description"
                   name="content"
+                  required
           >
           <label for="descriptionInput">Description</label>
         </div>
@@ -35,6 +37,7 @@
                   id="longContentInput"
                   style="min-height:25vh;max-height:65vh"
                   name="long_content"
+                  required
           ></textarea>
           <label for="longContentInput">Article Body</label>
         </div>
