--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,6 +6,8 @@
     <div class="col">
       <h2 class="mt-1">Latest News</h2>
     </div>
+
+    {# list of articles for current page number #}
     {% for article in articles %}
       <div class="col mb-3">
         <div class="card">
@@ -18,6 +20,45 @@
         </div>
       </div>
     {% endfor %}
+
+    {# page navigation #}
+    <div class="col">
+      <nav aria-label="article-list page navigation">
+        <ul class="pagination justify-content-center">
+          {# back-arrow for previous page #}
+          {% if current_page | int == 1 %}
+            <li class="page-item disabled">
+              <span class="page-link" aria-label="previous" aria-hidden="true">
+                &laquo;
+              </span>
+          {% else %}
+            <li class="page-item">
+              <a class="page-link" href="{{ url_for('article_list', page=current_page | int - 1) }}" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+              </a>
+          {% endif %}
+          </li>
+
+          <li class="page-item active" aria-current="page">
+            <a class="page-link" href="#">{{ current_page }}</a>
+          </li>
+
+          {# forward-arrow for next page #}
+          {% if current_page | int == last_page %}
+            <li class="page-item disabled">
+              <span class="page-link" aria-label="Next" aria-hidden="true">
+                &raquo;
+              </span>
+          {% else %}
+            <li class="page-item">
+              <a class="page-link" href="{{ url_for('article_list', page=current_page | int + 1) }}" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+              </a>
+          {% endif %}
+          </li>
+        </ul>
+      </nav>
+    </div>
   </div>
 </div>
 {% endblock %}
